--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" class="h-100 w-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="src/lib/animate.css">
     <link rel="stylesheet" href="src/lib/bootstrap.min.css">
 </head>
-<body>
-    <main>
+<body class="h-100 w-100">
+    <main class="bg-dark h-100 w-100 d-flex align-items-center justify-content-center">
         <div>
             <img class="imgPrincipal img-fluid fast" src="src/img/mobile.png" alt="dark">
         </div>
